--- a/.github/workflows/wp-phpunit.yml
+++ b/.github/workflows/wp-phpunit.yml
@@ -19,8 +19,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [ubuntu-18.04]
-        php-versions: ['7.4', '8.0']
+        operating-system: [ubuntu-21.04]
+        php-versions: ['7.4']
         phpunit-versions: ['7.5.20']
     name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
     steps:
